Bug 63029: Japanese input in text area in forms confuses subsequent input The fix is to - maintain the index of PasswordBuf at the start of IME - maintain the old IME text - remove the old IME text from PasswordBuf /r=jfrancis, /sr=kin, /a=blizzard